test/fixtures/errors/events_unhandled_error_nexttick.js
'use strict';
require('../../common');
Error.stackTraceLimit = 1;

const EventEmitter = require('events');
const er = new Error();
process.nextTick(() => {
  new EventEmitter().emit('error', er);
});
